[gd_scene load_steps=5 format=3 uid="uid://dmf0crnb0y5uk"]

[ext_resource type="Script" uid="uid://c4rp8qk1s6icm" path="res://lobby/lobby.gd" id="1_jtv5c"]
[ext_resource type="PackedScene" uid="uid://bysb6fjqllnn4" path="res://lobby/body_panel/body_panel.tscn" id="2_mnguq"]
[ext_resource type="PackedScene" uid="uid://dh27s6qyegjsc" path="res://lobby/orb_collection_panel/orb_collection_panel.tscn" id="3_uj4ub"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jtv5c"]

[node name="Lobby" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jtv5c")
script = ExtResource("1_jtv5c")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 25

[node name="BodyPanel" parent="HBoxContainer" instance=ExtResource("2_mnguq")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="OrbCollectionPanel" parent="HBoxContainer" instance=ExtResource("3_uj4ub")]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[connection signal="chest_slot_button_pressed" from="HBoxContainer/BodyPanel" to="." method="_on_body_panel_chest_slot_button_pressed"]
[connection signal="hands_slot_button_pressed" from="HBoxContainer/BodyPanel" to="." method="_on_body_panel_hands_slot_button_pressed"]
[connection signal="head_slot_button_pressed" from="HBoxContainer/BodyPanel" to="." method="_on_body_panel_head_slot_button_pressed"]
[connection signal="legs_slot_button_pressed" from="HBoxContainer/BodyPanel" to="." method="_on_body_panel_legs_slot_button_pressed"]
[connection signal="button_pressed" from="HBoxContainer/OrbCollectionPanel" to="." method="_on_orb_collection_panel_button_pressed"]
